Finished front page.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,15 +2,13 @@
 
 @main("Welcome to Play") {
     <h1 class="front-title">Mindference</h1>
-    <div class="front-introduction">
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tristique mattis leo et sollicitudin. Mauris
-            pulvinar ante at felis sollicitudin, a rutrum nibh dignissim. Cras rutrum urna mollis, interdum lacus sed,
-            sagittis sapien. Maecenas euismod, orci eu volutpat luctus, sapien est vulputate dui, quis ornare lorem mi
-            non diam.
-        </p>
+    <div id="front-newest-requests"></div>
+    <div>
+        <input id="login-email" type="text" name="Email" placeholder="Email">
+        <input id="login-password" type="password" name="Password" placeholder="Password">
     </div>
     <div class="front-user-space">
         <p><a href="#">Join</a> | <a href="#">Return</a></p>
     </div>
+    <div id="front-footer"></div>
 }
