--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -7,11 +7,18 @@
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/hello.js")" type="text/javascript"></script>
 
         <link href='http://fonts.googleapis.com/css?family=Lato|Playfair+Display' rel='stylesheet' type='text/css'>
+
+        <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+
+        <script src="http://fb.me/react-0.10.0.js"></script>
+        <script src="https://cdn.firebase.com/js/client/1.1.2/firebase.js"></script>
+        <script src="https://cdn.firebase.com/libs/reactfire/0.3.0/reactfire.min.js"></script>
     </head>
     <body>
         @content
+
+        <script src="@routes.Assets.at("javascripts/index.js")" type="text/javascript"></script>
     </body>
 </html>
