Added missing ids.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -8,7 +8,7 @@
         <input id="login-password" type="password" name="Password" placeholder="Password">
     </div>
     <div class="front-user-space">
-        <p><a href="#">Join</a> | <a href="#">Return</a></p>
+        <p><a id="register-button" href="#">Join</a> | <a id="login-button" href="#">Return</a></p>
     </div>
     <div id="front-footer"></div>
 }
