Added CRUD buttons placeholder in post page.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,13 +2,13 @@
 
 @main("Welcome to Play") {
     <h1 class="front-title">Mindference</h1>
-    <div id="front-newest-requests"></div>
-    <div>
+    <div class="div-main" id="front-newest-requests"></div>
+    <div class="div-main">
         <input id="login-email" type="text" name="Email" placeholder="Email">
         <input id="login-password" type="password" name="Password" placeholder="Password">
     </div>
-    <div class="front-user-space">
+    <div class="front-user-space div-main">
         <p><a id="register-button" href="#">Join</a> | <a id="login-button" href="#">Return</a></p>
     </div>
-    <div id="front-footer"></div>
+    <div class="div-main" id="front-footer div-main"></div>
 }
