--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,7 +1,5 @@
 @(title: String)(content: Html)
 
-<!DOCTYPE html>
-
 <html>
     <head>
         <title>@title</title>
@@ -12,9 +10,18 @@
 
         <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 
+     <!--   <script src="@routes.Assets.at("javascripts/hello.js")" type="text/javascript"></script> -->
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+
         <script src="http://fb.me/react-0.10.0.js"></script>
         <script src="https://cdn.firebase.com/js/client/1.1.2/firebase.js"></script>
         <script src="https://cdn.firebase.com/libs/reactfire/0.3.0/reactfire.min.js"></script>
+
+        <!--jsTree-->
+        <link rel="stylesheet" href="@routes.Assets.at("dist/themes/mindference/style.css")"></script>
+        <script src="@routes.Assets.at("dist/jstree.js")" type="text/javascript"></script>
+
+        <link href='http://fonts.googleapis.com/css?family=Lato|Playfair+Display' rel='stylesheet' type='text/css'>
     </head>
     <body>
         @content
