--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -21,13 +21,13 @@ a:visited {
 }
 
 h1.front-title {
-    margin-top: 180px;
+    margin-top: 15%;
     margin-bottom: 32px;
     font-size: 120px;
     text-align: center;
 }
 
-div {
+div.div-main {
     margin-left: auto;
     margin-right: auto;
     width: 960px;
@@ -35,7 +35,7 @@ div {
 }
 
 div.front-user-space {
-    margin-top: 24px;
+    margin-top: 72px;
     font-family: 'Playfair Display', serif;
     font-size: 26px;
 }
@@ -54,4 +54,19 @@ input {
 
 #front-footer {
     height: 76px;
+}
+
+/* post page */
+
+#jstree h2, #jstree h4, #jstree p, #jstree a{
+/*    display: inline;*/
+    margin: 0 0 0 8px;
+}
+
+#jstree h4{
+    font-weight:normal;
+}
+
+#jstree div{
+    display: inline-block;
 }
