--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -4,14 +4,12 @@
     <head>
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/post.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
 
         <link href='http://fonts.googleapis.com/css?family=Lato|Playfair+Display' rel='stylesheet' type='text/css'>
 
         <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-
-     <!--   <script src="@routes.Assets.at("javascripts/hello.js")" type="text/javascript"></script> -->
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
         <script src="http://fb.me/react-0.10.0.js"></script>
         <script src="https://cdn.firebase.com/js/client/1.1.2/firebase.js"></script>
