--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -11,6 +11,9 @@
 
         <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 
+     <!--   <script src="@routes.Assets.at("javascripts/hello.js")" type="text/javascript"></script> -->
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+
         <script src="http://fb.me/react-0.10.0.js"></script>
         <script src="https://cdn.firebase.com/js/client/1.1.2/firebase.js"></script>
         <script src="https://cdn.firebase.com/libs/reactfire/0.3.0/reactfire.min.js"></script>
