--- a/app/views/post.scala.html
+++ b/app/views/post.scala.html
@@ -26,8 +26,7 @@
                         <a href="#">Moarte Lenta</a> <!-- Category -->
                     </div>
                     <div class="idea-element-description">
-                        <p>Hello, I am a burly man and I want to buy a cock ring for my future husband.</p>
-                        <textarea></textarea>
+                        <p id="idea-paragraph-1">Hello, I am a burly man and I want to buy a cock ring for my future husband.</p>
                     </div>
                     <div class="idea-element-control">
                         <a id="idea-elaborate-1" href="#">Elaborate</a>
@@ -134,31 +133,41 @@
 </div>
 
 <script>
-  $(function () {
-    // 6 create an instance when the DOM is ready
-    $('#jstree').jstree(
-    {
-/*    "types" : {
-      "default" : {
-        "icon" : "glyphicon glyphicon-flash"
-      },
-      "demo" : {
-        "icon" : "glyphicon glyphicon-ok"
-      }
-    },
-*/
+    $(function () {
+        /*
+            $('#idea-elaborate-1').on('click', function () {
+            var paragraph = $('#idea-paragraph-1');
+            var width = paragraph.css('width');
+            var text = paragraph.text();
+            paragraph.replaceWith("<textarea id='idea-textarea-1'>" + text + "</textarea>");
+            $('#idea-textarea-1').css("width", width);
+        });
+        */
+        /*
+        // 6 create an instance when the DOM is ready
+        $('#jstree').jstree( {
+            /* "types" : {
+                "default" : {
+                    "icon" : "glyphicon glyphicon-flash"
+                },
+                "demo" : {
+                    "icon" : "glyphicon glyphicon-ok"
+                }
+            },
+        */
         "plugins" : [ "types", "wholerow", "state" ]
-    });
+        });
 
-    // 7 bind to events triggered on the tree
-    $('#jstree').on("changed.jstree", function (e, data) {
-      console.log(data.selected);
+        // 7 bind to events triggered on the tree
+        $('#jstree').on("changed.jstree", function (e, data) {
+            console.log(data.selected);
+        });
+
+        // 8 interact with the tree - either way is OK
+        $('button').on('click', function () {
+            $('#jstree').jstree('select_node', 'child_node_1');
+        });
     });
-    // 8 interact with the tree - either way is OK
-    $('button').on('click', function () {
-      $('#jstree').jstree('select_node', 'child_node_1');
-    });
-  });
 
   </script>
 }
