--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -9,14 +9,14 @@
 
         <link href='http://fonts.googleapis.com/css?family=Lato|Playfair+Display' rel='stylesheet' type='text/css'>
 
-        <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+        <script src="http://code.jquery.com/jquery-1.11.0.js"></script>
 
      <!--   <script src="@routes.Assets.at("javascripts/hello.js")" type="text/javascript"></script> -->
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.js"></script>
 
         <script src="http://fb.me/react-0.10.0.js"></script>
         <script src="https://cdn.firebase.com/js/client/1.1.2/firebase.js"></script>
-        <script src="https://cdn.firebase.com/libs/reactfire/0.3.0/reactfire.min.js"></script>
+        <script src="https://cdn.firebase.com/libs/reactfire/0.3.0/reactfire.js"></script>
 
         <!--jsTree-->
         <link rel="stylesheet" href="@routes.Assets.at("dist/themes/mindference/style.css")"></script>
