--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -5,6 +5,7 @@
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/post.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bar.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
 
         <link href='http://fonts.googleapis.com/css?family=Lato|Playfair+Display' rel='stylesheet' type='text/css'>
