--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -2,6 +2,13 @@ body {
     background-image: url(/assets/images/front-background.svg);
     background-repeat: no-repeat;
     background-position: right bottom;
+    padding:0px;
+    margin:0px;
+}
+
+html{
+padding:0px;
+margin:0px;
 }
 
 h1 {
