One last commit.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -11,4 +11,6 @@
         <p><a id="register-button" href="#">Join</a> | <a id="login-button" href="#">Return</a></p>
     </div>
     <div class="div-main" id="front-footer div-main"></div>
+
+    <script src="@routes.Assets.at("javascripts/index.js")" type="text/javascript"></script>
 }
