Replace post page texts.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,6 +1,6 @@
 @(message: String)
 
-@main("Welcome to Play") {
+@main("Mindference") {
     <h1 class="front-title">Mindference</h1>
     <div class="div-main" id="front-newest-requests"></div>
     <div class="div-main">
